--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ description = "A highly-configurable general-purpose templating program."
 name = "tmpl"
 readme = "README.md"
 repository = "https://github.com/HarrisonTotty/tmpl"
-version = "2.1.2"
+version = "2.1.4"
 
 [tool.poetry.dependencies]
 python = "^3.10"
@@ -12,7 +12,7 @@ Jinja2 = "*"
 PyYAML = "*"
 
 [tool.poetry.dev-dependencies]
-pytest = "^5.2"
+pytest = "*"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
